correct some spacing issues with initial story spread element.

--- a/src/app/story-spread/story-spread.component.css
+++ b/src/app/story-spread/story-spread.component.css
@@ -14,6 +14,17 @@ a {
   color: #008E00;
 }
 
+.bottom {
+  display: flex;
+}
+
+.sort {
+  display: flex;
+  flex-direction: column;
+  margin-top: -1%;
+  margin-left: 2%;
+}
+
 .insta {
   width: 32px;
   height: 32px;
